--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     html, body {margin: 0px;}
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans');
   </style>
 </head>
 <body>
